--- a/index.html
+++ b/index.html
@@ -1,45 +1,96 @@
 <!doctype html>
 <html lang="en">
 <head>
-<title>Victor Isaac - Portfolio</title>
+<title>Victor Isaac - Python Backend Engineer | I can design and build any backend infra</title>
 <meta charset="UTF-8">
-<meta name="title" content="FullStack Web Deveoper">
-<meta name="description" content="Victor Isaac is an enthusiastic and passionate programmer with over 2 yearsof experience using various programming languages and web frameworks to build and maintain websites and web apps. Experience in designing and developing sites from concept to rollout. grasp of various programming languages like C#, Python, JavaScript, and framework options like ASP.NETCore, Django, etc. including development platforms and security requirements.">
-<meta name="keywords" content="Python, Csharp, C# ASP.NETCore, backend, developer, solidity, Django, victor isaac, portfolio, Victhereum">
+<meta name="title" content="Python Backend Engineer | I can design and build any backend infra">
+<meta name="description" content="As an accomplished Python/Django Backend Engineer with 7 years of experience, Victor Isaac specializes in creating robust, scalable solutions using Django. My passion lies in crafting efficient, maintainable code that drives business success. Here are some key highlights:
+
+- Technical Proficiency:
+- Proficient in Python, C#, and JavaScript.
+- Skilled in SQL and database management, particularly with PostgreSQL and MySQL.
+- Strong understanding of UI/UX design principles and industry best practices.
+
+- Project Highlights:
+- AI Language Learning Microservice:
+- Conceptualized and developed a media microservice for an AI language learning software company. The result? Increased user engagement and retention rates.
+- Monero-Powered E-Commerce Platform:
+- Built an E-commerce website that leverages Monero Cryptocurrency for payments.
+- Implemented an escrow feature, conflict resolution mechanisms, and a user-friendly interface.
+- Ensured rigorous security protocols for safe transactions.
+- Hardware Products Command Center:
+- Designed and implemented the backend service for a hardware products command center.
+- Facilitated seamless communication between devices, allowing users to control and monitor their devices remotely.
+- Crypto Command Center:
+- Developed a centralized platform that aggregates users' cryptocurrencies from various exchanges (e.g., Binance, Kucoin, Coinbase).
+- Simplified tracking and management of crypto assets.
+
+I'm committed to staying up-to-date with the latest technologies and delivering exceptional results. With excellent communication skills and a customer-focused mindset, I'm ready to contribute to your projects on Upwork. Let's drive business growth together!">
+<meta name="keywords" content="upwork, freelancer, Django developer, Fullstack developer, Backend developer, Django Rest Framework, Python developer, JavaScript developer, SQL database management, PostgreSQL developer, MySQL developer, RESTful APIs, scalable web development, maintainable code, efficient code, media microservice development, AI language learning software, e-commerce development, Monero cryptocurrency, escrow feature, conflict resolution, user-friendly interface, secure transactions, hardware products command center, device communication, remote monitoring, crypto command center, centralized exchange tracking, Binance, Kucoin, Coinbase">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta property="og:type" content="Portfolio" />
 <meta name="robots" content="index, follow">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="language" content="English">
 <meta property="og:url" content="https://victherem.github.io" />
+<meta property="og:author-info" content="Victor Isaac - Python Backend Engineer | I can design and build any backend infra" />
 
-<meta property="og:title" content="I develop for the web" />
+<meta property="og:title" content="Python Backend Engineer | I can design and build any backend infra" />
 
 <meta property="og:image" content="https://victhereum.github.io/images/profile-loader.jpg" />
 
-<meta property="og:description" content="Victor Isaac is an enthusiastic and passionate programmer with over 2 years
-of experience using various programming languages and web frameworks to
- build and maintain websites and webapps. Experience in designing and developing
-  sites from concept to roll out. grasp of various programming languages like
-   C#, Python, JavaScript  and framework options like ASP.NETCore, Django etc.
-    including development platforms and security requirements." />
+<meta property="og:description" content="As an accomplished Python/Django Backend Engineer with 7 years of experience, Victor Isaac specializes in creating robust, scalable solutions using Django. My passion lies in crafting efficient, maintainable code that drives business success. Here are some key highlights:
 
+- Technical Proficiency:
+- Proficient in Python, C#, and JavaScript.
+- Skilled in SQL and database management, particularly with PostgreSQL and MySQL.
+- Strong understanding of UI/UX design principles and industry best practices.
 
+- Project Highlights:
+- AI Language Learning Microservice:
+- Conceptualized and developed a media microservice for an AI language learning software company. The result? Increased user engagement and retention rates.
+- Monero-Powered E-Commerce Platform:
+- Built an E-commerce website that leverages Monero Cryptocurrency for payments.
+- Implemented an escrow feature, conflict resolution mechanisms, and a user-friendly interface.
+- Ensured rigorous security protocols for safe transactions.
+- Hardware Products Command Center:
+- Designed and implemented the backend service for a hardware products command center.
+- Facilitated seamless communication between devices, allowing users to control and monitor their devices remotely.
+- Crypto Command Center:
+- Developed a centralized platform that aggregates users' cryptocurrencies from various exchanges (e.g., Binance, Kucoin, Coinbase).
+- Simplified tracking and management of crypto assets.
 
+I'm committed to staying up-to-date with the latest technologies and delivering exceptional results. With excellent communication skills and a customer-focused mindset, I'm ready to contribute to your projects on Upwork. Let's drive business growth together!" />
 <meta name="twitter:card" content="summary_large_image">
 
-<meta name="twitter:site" content="@IsaacVictron">
+<meta name="twitter:site" content="@__victhereum__">
 
-<meta name="twitter:creator" content="@IsaacVictron">
+<meta name="twitter:creator" content="@__victhereum__">
 
-<meta name="twitter:title" content="Full-Stack web developer" />
+<meta name="twitter:title" content="Python Backend Engineer | I can design and build any backend infra" />
 
-<meta name="twitter:description" content="Victor Isaac is an enthusiastic and passionate programmer with over 2 years
-of experience using various programming languages and web frameworks to
- build and maintain websites and webapps. Experience in designing and developing
-  sites from concept to roll out. grasp of various programming languages like
-   C#, Python, JavaScript  and framework options like ASP.NETCore, Django etc.
-    including development platforms and security requirements." />
+<meta name="twitter:description" content="As an accomplished Python/Django Backend Engineer with 7 years of experience, Victor Isaac specializes in creating robust, scalable solutions using Django. My passion lies in crafting efficient, maintainable code that drives business success. Here are some key highlights:
+
+- Technical Proficiency:
+- Proficient in Python, C#, and JavaScript.
+- Skilled in SQL and database management, particularly with PostgreSQL and MySQL.
+- Strong understanding of UI/UX design principles and industry best practices.
+
+- Project Highlights:
+- AI Language Learning Microservice:
+- Conceptualized and developed a media microservice for an AI language learning software company. The result? Increased user engagement and retention rates.
+- Monero-Powered E-Commerce Platform:
+- Built an E-commerce website that leverages Monero Cryptocurrency for payments.
+- Implemented an escrow feature, conflict resolution mechanisms, and a user-friendly interface.
+- Ensured rigorous security protocols for safe transactions.
+- Hardware Products Command Center:
+- Designed and implemented the backend service for a hardware products command center.
+- Facilitated seamless communication between devices, allowing users to control and monitor their devices remotely.
+- Crypto Command Center:
+- Developed a centralized platform that aggregates users' cryptocurrencies from various exchanges (e.g., Binance, Kucoin, Coinbase).
+- Simplified tracking and management of crypto assets.
+
+I'm committed to staying up-to-date with the latest technologies and delivering exceptional results. With excellent communication skills and a customer-focused mindset, I'm ready to contribute to your projects on Upwork. Let's drive business growth together!" />
 
 <meta name="twitter:image" content="https://victhereum.github.io/images/profile-loader.jpg" />
 <link rel="canonical" href="https://victhereum.github.io/index.html" />
@@ -117,40 +168,43 @@ of experience using various programming languages and web frameworks to
             </div>
             <div class="social-links clip-animation">
               <ul>
-                <li><a href="https://www.facebook.com/victor.isaac.7923030" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
-                <li><a href="https://twitter.com/IsaacVictron" target="_blank"><i class="fab fa-twitter"></i></a></li>
+                <li><a href="https://www.upwork.com/freelancers/~015570d3b0e46af127?mp_source=share" target="_blank"><i class="fab fa-upwork"></i></a></li>
                 <li><a href="https://linkedin.com/in/victor-isaac" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
                 <li><a href="https://github.com/Victhereum" target="_blank"><i class="fab fa-github"></i></a></li>
               </ul>
             </div>
           </div>
           <div class="col-xl-9 col-lg-8 col-md-6 right-content">
-            <h5 class="hi classic-animation" data-delay=".5">Hello! <span>👋</span></h5>
+            <h5 class="hi classic-animation" data-delay=".5">Hello! <span>👋 I am Victor Isaac</span></h5>
             <div class="spacer-15"></div>
-            <h1 class="hero-big classic-animation" data-delay=".7">I'm Victor Isaac<br> I develop<span
-                class="element" data-values=" Websites.,  WebApps.,  Smart Contracts., " data-loop="true"
-                data-backdelay="2">For the Web.</span></h1>
+            <h1 class="hero-big classic-animation" data-delay=".7">Python Backend Engineer<br>I<span
+                class="element" data-values=" design systems., build software., deploy applications., " data-loop="true"
+                data-backdelay="2">design and build any infra</span>
+            </h1>
             <div class="spacer-30"></div>
             <hr class="clip-animation" data-delay="1">
             <ul class="row profile-info clip-animation" data-delay="1">
-              <li class="col-xl-4 col-lg-6"> <a target="_blank" href="https://wa.me/+2348124182627"><i
-                    class="fa-brands fa-whatsapp"></i> <span>+2348-1241-82627</span></a></li>
+              <li class="col-xl-4 col-lg-6"> <a target="_blank" href="https://wa.me/+2348110258156"><i
+                    class="fa-brands fa-whatsapp"></i> <span>+2348-1102-58156</span></a></li>
               <li class="col-xl-4 col-lg-6"> <a target="_blank" href="mailto:tamsvictorisaac@outlook.com"><i
                     class="fa-solid fa-at"></i> <span>outlook.com</span></a></li>
-              <li class="col-xl-4 col-lg-6"> <i class="fa-solid fa-location-dot"></i> <span>PH | Lagos, Nigeria</span></li>
+              <li class="col-xl-4 col-lg-6"> <a href="https://www.upwork.com/freelancers/~015570d3b0e46af127?mp_source=share" target="_blank"> <i class="fab fa-upwork"></i> <span>Upwork Me</span></a></li>
             </ul>
           </div>
         </div>
         <div class="spacer-30"></div>
         <p class="clip-animation" data-delay="1.1">
-          I'm an enthusiastic and passionate programmer with over 2 years of experience using various programming languages and web frameworks to build and maintain websites and web apps. Experience in designing and developing sites from concept to rollout. grasp of various programming languages like C#, Python, JavaScript, and framework options like Django, etc. including development platforms and security requirements. I am fluent in English and am able to undertake with utmost perfection the jobs I am privileged to have.
-
+          As an accomplished Django Backend and Fullstack developer with 7 years of experience, I specialize in creating robust, scalable solutions using Django. My passion lies in crafting efficient, maintainable code that drives business success.
+        </p>
+        <div class="spacer-15"></div>
+        <p>I'm committed to staying up-to-date with the latest technologies and delivering exceptional results. With excellent communication skills and a customer-focused mindset, I'm ready to contribute to your projects on Upwork. Let's drive business growth together!</p>
         <!-- download cv-->
          <div class="spacer-45"></div>
        <div class="col-xl-12 text-center">
-          <a href="resume/Victor_Isaac_resume.pdf" class="emoji-button" download><i>🤓 </i><span>Download My Cv</span></a>
+          <a href="resume/Resume-Victor-Isaac.pdf" class="emoji-button" download><i>🤓 </i><span>Download My Resume</span></a>
         </div>
       </section>
+
       <!-- Services -->
       <section class="services scale-animation" data-delay="1.3">
         <div class="spacer-45"></div>
@@ -163,7 +217,7 @@ of experience using various programming languages and web frameworks to
           <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6">
             <div class="service-item">
             <i class="fa-solid fa-laptop-code"></i>
-            <h5>Web Apps </h5>
+            <h5>Web Application</h5>
           </div>
           <p>
             I build highly secured, maintainable and scalebale web apps, and can serve as a backend and fullstack web developer<br>
@@ -179,29 +233,29 @@ of experience using various programming languages and web frameworks to
           <!-- a service -->
           <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6">
             <div class="service-item">
-            <i class="fa-brands fa-ethereum"></i>
-            <h5>Decentralized <br> Aplications </h5>
+            <i><img src="https://img.icons8.com/?size=50&id=tJJWhcXCnpyE&format=png&color=ffffff" alt=""></i>
+            <h5>System <br> Designs </h5>
           </div>
           <p>
-            I build tokens, DApps and highly secured smart contracts accross any EVM-Compatible chain,
-             I can also place your token logo on Trust Wallet too<br>
-             <i><img src="https://img.icons8.com/ios-filled/18/ffb400/solidity.png"/></i>
-             <i class="fab fa-ethereum" style="color: #ffb400;" ></i>
-             <i><img src="https://img.icons8.com/external-black-fill-lafs/18/ffb400/external-Chainlink-cryptocurrency-black-fill-lafs.png"/></i>
-             <i><img src="https://img.icons8.com/external-black-fill-lafs/18/ffb400/external-Binance-cryptocurrency-black-fill-lafs.png"/></i>
-             <i><img src="https://img.icons8.com/external-black-fill-lafs/18/ffb400/external-Polygon-cryptocurrency-black-fill-lafs.png"/></i>
+            I can design your system architectture based on your software requirements, and can build your software from scratch<br>
+             <i class="fab fa-python" style="color: #ffb400;"></i>
+             <i><img src="https://img.icons8.com/?size=18&id=25010&format=png&color=ffb400"/></i>
+             <i><img src="https://img.icons8.com/?size=18&id=dmAy2s25QyTr&format=png&color=ffb400"/></i>
+             <i><img src="https://img.icons8.com/?size=18&id=22797&format=png&color=ffb400"/></i>
+             <i><img src="https://img.icons8.com/?size=18&id=VoXRGxL3ekkk&format=png&color=ffb400"/></i>
+             <i><img src="https://img.icons8.com/?size=18&id=25692&format=png&color=ffb400"/></i>
+             <i><img src="https://img.icons8.com/?size=18&id=61959&format=png&color=FAB005"/></i>
+             <i style="color: #ffb400;">render</i>
           </p>
           </div>
           <!-- a service -->
           <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6">
             <div class="service-item">
-            <i class="fa-brands fa-wordpress"></i>
-            <h5>WordPress <br> CMS </h5>
+            <i><img src="https://img.icons8.com/?size=50&id=21887&format=png&color=ffffff" alt=""></i>
+            <h5>Backend API<br> Development </h5>
           </div>
-          <p>I build intriguing WordPress websites that meet your business needs,
-             showcasing the essense and values you are offering to the entire world,
-             whilst giving you access to a maintanailble back-office like no ther <br>
-            </b>
+          <p>I can build your backend business logic and serve them via REST APIs
+            <br>
             <i class="fab fa-elementor" style="color: #ffb400;"></i>
             <i class="fab fa-wpforms" style="color: #ffb400;" ></i>
             <i><img src="https://img.icons8.com/material-rounded/18/ffb400/woocommerce.png"/></i>
@@ -286,7 +340,7 @@ of experience using various programming languages and web frameworks to
           <div class="container">
             <div class="footer-inner">
               <div class="copyright">
-                <p>Copyright 2022 - All right reserved</p>
+                <p>Copyright 2024 - All right reserved</p>
               </div>
               <ul class="social">
                 <li><a href="https://www.facebook.com/victor.isaac.7923030" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
