--- a/single-blog.html
+++ b/single-blog.html
@@ -1,63 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>Victor Isaac - Portfolio</title>
-    <meta charset="UTF-8" />
-    <meta name="title" content="FullStack Web Deveoper" />
-    <meta
-      name="description"
-      content="Victor Isaac is an enthusiastic and passionate programmer with over 2 yearsof experience using various programming languages and web frameworks to build and maintain websites and web apps. Experience in designing and developing sites from concept to rollout. grasp of various programming languages like C#, Python, JavaScript, and framework options like ASP.NETCore, Django, etc. including development platforms and security requirements."
-    />
-    <meta
-      name="keywords"
-      content="Python, Csharp, C# ASP.NETCore, backend, developer, solidity, Django, victor isaac, portfolio, Victhereum"
-    />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta property="og:type" content="Portfolio" />
-    <meta name="robots" content="index, follow" />
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta name="language" content="English" />
-    <meta property="og:url" content="https://victherem.github.io" />
+<head>
+<title>Victor Isaac - Python Backend Engineer | I can design and build any backend infra</title>
+<meta charset="UTF-8">
+<meta name="title" content="Python Backend Engineer | I can design and build any backend infra">
+<meta name="description" content="As an accomplished Python/Django Backend Engineer with 7 years of experience, Victor Isaac specializes in creating robust, scalable solutions using Django. My passion lies in crafting efficient, maintainable code that drives business success. Here are some key highlights:
 
-    <meta property="og:title" content="I develop for the web" />
+- Technical Proficiency:
+- Proficient in Python, C#, and JavaScript.
+- Skilled in SQL and database management, particularly with PostgreSQL and MySQL.
+- Strong understanding of UI/UX design principles and industry best practices.
 
-    <meta
-      property="og:image"
-      content="https://victhereum.github.io/images/profile-loader.jpg"
-    />
+- Project Highlights:
+- AI Language Learning Microservice:
+- Conceptualized and developed a media microservice for an AI language learning software company. The result? Increased user engagement and retention rates.
+- Monero-Powered E-Commerce Platform:
+- Built an E-commerce website that leverages Monero Cryptocurrency for payments.
+- Implemented an escrow feature, conflict resolution mechanisms, and a user-friendly interface.
+- Ensured rigorous security protocols for safe transactions.
+- Hardware Products Command Center:
+- Designed and implemented the backend service for a hardware products command center.
+- Facilitated seamless communication between devices, allowing users to control and monitor their devices remotely.
+- Crypto Command Center:
+- Developed a centralized platform that aggregates users' cryptocurrencies from various exchanges (e.g., Binance, Kucoin, Coinbase).
+- Simplified tracking and management of crypto assets.
 
-    <meta
-      property="og:description"
-      content="Victor Isaac is an enthusiastic and passionate programmer with over 2 years
-of experience using various programming languages and web frameworks to
- build and maintain websites and webapps. Experience in designing and developing
-  sites from concept to roll out. grasp of various programming languages like
-   C#, Python, JavaScript  and framework options like ASP.NETCore, Django etc.
-    including development platforms and security requirements."
-    />
+I'm committed to staying up-to-date with the latest technologies and delivering exceptional results. With excellent communication skills and a customer-focused mindset, I'm ready to contribute to your projects on Upwork. Let's drive business growth together!">
+<meta name="keywords" content="upwork, freelancer, Django developer, Fullstack developer, Backend developer, Django Rest Framework, Python developer, JavaScript developer, SQL database management, PostgreSQL developer, MySQL developer, RESTful APIs, scalable web development, maintainable code, efficient code, media microservice development, AI language learning software, e-commerce development, Monero cryptocurrency, escrow feature, conflict resolution, user-friendly interface, secure transactions, hardware products command center, device communication, remote monitoring, crypto command center, centralized exchange tracking, Binance, Kucoin, Coinbase">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta property="og:type" content="Portfolio" />
+<meta name="robots" content="index, follow">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta name="language" content="English">
+<meta property="og:url" content="https://victherem.github.io" />
+<meta property="og:author-info" content="Victor Isaac - Python Backend Engineer | I can design and build any backend infra" />
 
-    <meta name="twitter:card" content="summary_large_image" />
+<meta property="og:title" content="Python Backend Engineer | I can design and build any backend infra" />
 
-    <meta name="twitter:site" content="@IsaacVictron" />
+<meta property="og:image" content="https://victhereum.github.io/images/profile-loader.jpg" />
 
-    <meta name="twitter:creator" content="@IsaacVictron" />
+<meta property="og:description" content="As an accomplished Python/Django Backend Engineer with 7 years of experience, Victor Isaac specializes in creating robust, scalable solutions using Django. My passion lies in crafting efficient, maintainable code that drives business success. Here are some key highlights:
 
-    <meta name="twitter:title" content="Full-Stack web developer" />
+- Technical Proficiency:
+- Proficient in Python, C#, and JavaScript.
+- Skilled in SQL and database management, particularly with PostgreSQL and MySQL.
+- Strong understanding of UI/UX design principles and industry best practices.
 
-    <meta
-      name="twitter:description"
-      content="Victor Isaac is an enthusiastic and passionate programmer with over 2 years
-of experience using various programming languages and web frameworks to
- build and maintain websites and webapps. Experience in designing and developing
-  sites from concept to roll out. grasp of various programming languages like
-   C#, Python, JavaScript  and framework options like ASP.NETCore, Django etc.
-    including development platforms and security requirements."
-    />
+- Project Highlights:
+- AI Language Learning Microservice:
+- Conceptualized and developed a media microservice for an AI language learning software company. The result? Increased user engagement and retention rates.
+- Monero-Powered E-Commerce Platform:
+- Built an E-commerce website that leverages Monero Cryptocurrency for payments.
+- Implemented an escrow feature, conflict resolution mechanisms, and a user-friendly interface.
+- Ensured rigorous security protocols for safe transactions.
+- Hardware Products Command Center:
+- Designed and implemented the backend service for a hardware products command center.
+- Facilitated seamless communication between devices, allowing users to control and monitor their devices remotely.
+- Crypto Command Center:
+- Developed a centralized platform that aggregates users' cryptocurrencies from various exchanges (e.g., Binance, Kucoin, Coinbase).
+- Simplified tracking and management of crypto assets.
 
-    <meta
-      name="twitter:image"
-      content="https://victhereum.github.io/images/profile-loader.jpg"
-    />
+I'm committed to staying up-to-date with the latest technologies and delivering exceptional results. With excellent communication skills and a customer-focused mindset, I'm ready to contribute to your projects on Upwork. Let's drive business growth together!" />
+<meta name="twitter:card" content="summary_large_image">
+
+<meta name="twitter:site" content="@__victhereum__">
+
+<meta name="twitter:creator" content="@__victhereum__">
+
+<meta name="twitter:title" content="Python Backend Engineer | I can design and build any backend infra" />
+
+<meta name="twitter:description" content="As an accomplished Python/Django Backend Engineer with 7 years of experience, Victor Isaac specializes in creating robust, scalable solutions using Django. My passion lies in crafting efficient, maintainable code that drives business success. Here are some key highlights:
+
+- Technical Proficiency:
+- Proficient in Python, C#, and JavaScript.
+- Skilled in SQL and database management, particularly with PostgreSQL and MySQL.
+- Strong understanding of UI/UX design principles and industry best practices.
+
+- Project Highlights:
+- AI Language Learning Microservice:
+- Conceptualized and developed a media microservice for an AI language learning software company. The result? Increased user engagement and retention rates.
+- Monero-Powered E-Commerce Platform:
+- Built an E-commerce website that leverages Monero Cryptocurrency for payments.
+- Implemented an escrow feature, conflict resolution mechanisms, and a user-friendly interface.
+- Ensured rigorous security protocols for safe transactions.
+- Hardware Products Command Center:
+- Designed and implemented the backend service for a hardware products command center.
+- Facilitated seamless communication between devices, allowing users to control and monitor their devices remotely.
+- Crypto Command Center:
+- Developed a centralized platform that aggregates users' cryptocurrencies from various exchanges (e.g., Binance, Kucoin, Coinbase).
+- Simplified tracking and management of crypto assets.
+
+I'm committed to staying up-to-date with the latest technologies and delivering exceptional results. With excellent communication skills and a customer-focused mindset, I'm ready to contribute to your projects on Upwork. Let's drive business growth together!" />
+
+<meta name="twitter:image" content="https://victhereum.github.io/images/profile-loader.jpg" />
     <link rel="canonical" href="https://victhereum.github.io/resume.html" />
 
     <!-- Favicon -->
@@ -327,7 +362,7 @@ of experience using various programming languages and web frameworks to
               <div class="container">
                 <div class="footer-inner">
                   <div class="copyright">
-                    <p>Copyright 2022 - All right reserved</p>
+                    <p>Copyright 2024 - All right reserved</p>
                   </div>
                   <ul class="social">
                     <li>
